Geometry Nodes: Inserting Rotate Vector node on a link connects wrong sockets #116435

Closed
opened 2023-12-21 16:12:44 +01:00 by Simon Thommes · 1 comment
Member

System Information
Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-21 11:20, hash: e055db66055a
Worked: (newest version of Blender that worked as expected)

Short description of error
Inserting the Rotate Vector node on a link connects the wrong sockets
image

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Linux-6.6.7-gentoo-x86_64-AMD_Ryzen_9_5950X_16-Core_Processor-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.06 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-21 11:20, hash: `e055db66055a` Worked: (newest version of Blender that worked as expected) **Short description of error** Inserting the Rotate Vector node on a link connects the wrong sockets ![image](/attachments/457c0592-0f1e-414b-981c-9fbe0cbe8467) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Simon Thommes added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-12-21 16:12:45 +01:00
Simon Thommes added this to the Nodes & Physics project 2023-12-21 16:12:55 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-12-21 16:32:33 +01:00
Richard Antalik added
Module
Nodes & Physics
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-12-21 19:41:36 +01:00
Member

This looks expected from current code. sock_rotation has higher priority (6) than the vector socket (4).
We can fix this by always prioritizing vector socket:

diff --git a/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc b/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc
index 15d6b47f0fa..fb1060f5616 100644
--- a/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc
+++ b/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc
@@ -11,7 +11,7 @@ namespace blender::nodes::node_fn_rotate_vector_cc {
 static void node_declare(NodeDeclarationBuilder &b)
 {
   b.is_function_node();
-  b.add_input<decl::Vector>("Vector");
+  b.add_input<decl::Vector>("Vector").is_default_link_socket();
   b.add_input<decl::Rotation>("Rotation");
   b.add_output<decl::Vector>("Vector");
 };

This looks expected from current code. `sock_rotation` has higher priority (6) than the vector socket (4). We can fix this by always prioritizing vector socket: ```Diff diff --git a/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc b/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc index 15d6b47f0fa..fb1060f5616 100644 --- a/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc +++ b/source/blender/nodes/function/nodes/node_fn_rotate_vector.cc @@ -11,7 +11,7 @@ namespace blender::nodes::node_fn_rotate_vector_cc { static void node_declare(NodeDeclarationBuilder &b) { b.is_function_node(); - b.add_input<decl::Vector>("Vector"); + b.add_input<decl::Vector>("Vector").is_default_link_socket(); b.add_input<decl::Rotation>("Rotation"); b.add_output<decl::Vector>("Vector"); }; ```
Pratik Borhade self-assigned this 2023-12-26 07:53:32 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-03 00:38:49 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116435
No description provided.